# technobiz-trader-agent

./: .env.template  .gitignore  AGENTS.md  AGENT_ANIMATION_README.md  CUSTOM_PAIRS_GUIDE.md  CUSTOM_PAIRS_IMPLEMENTATION.md  CUSTOM_PAIRS_QUICK_REF.md  DATA_PROVIDERS.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FILES_CREATED.md  GUI_VISUAL_MOCKUPS.md  IMPLEMENTATION_SUMMARY.md  LICENSE.txt  MINECRAFT_OFFICE_GUIDE_v3.md  MT5_Connect.md  MT5_INTEGRATION_GUIDE.md  MULTI_PAIR_GUIDE.md  PRODUCTION_AUDIT.md  PRODUCTION_READINESS.md  QUICK_COMMANDS.md  QUICK_REFERENCE.md  README.md  REPLACEMENT_SUMMARY.md  TRADINGVIEW_Setup.md  TechnobizTrader_Gold_ICT_v6.pine  TradingView_Connect.md  USER_GUIDE.md  build-installer.bat  build.bat  build_Gui_New.ps1  build_gui.ps1  build_gui.sh  build_installer.ps1  claude.md  create_icon.py  create_pdf.py  docker-compose.yml  gui_server.py  interactive_mode.py  (+14 more)
.github/workflows/: ci.yml
agents/: __init__.py  base_agent.py  workflow.py  workflow_orchestrator.py
agents/analyse_master/: __init__.py  analyse_master.py
agents/backtester/: __init__.py  backtester.py
agents/market_regime/: __init__.py  market_regime.py
agents/news_sentinel/: __init__.py  news_sentinel.py
agents/risk_sentinel/: __init__.py  risk_sentinel.py
agents/trader_master/: __init__.py  trader_master.py
agents/trend_master/: __init__.py  trend_master.py
api/: __init__.py  main.py  websocket_manager.py
api/routes/: __init__.py  config.py  risk.py  signals.py  trades.py  trends.py
config/: __init__.py  api_config.py  constants.py  kill_switch.py  settings.py  trading_pairs_config.py  trading_params.py  user_risk_settings.py
database/: __init__.py  db_manager.py  models.py
docs/: API_REFERENCE.md  ICT_METHODOLOGY.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  TechnobizTrader.excalidraw  TechnobizTrader_Agency_Guide.html  USER_MANUAL.md
gui/: package-lock.json  package.json
gui/electron/: main.js  preload.js
market_data/: __init__.py  data_provider.py  data_provider_factory.py  mt5_provider.py  tradingview_provider.py
scripts/: build_setup_guide.py  generate_icons.py
tests/: __init__.py  conftest.py  test_analyse_master.py  test_trader_master.py  test_workflow.py
tests/fixtures/: sample_candles.py
tests/integration/: test_end_to_end.py
utils/: __init__.py  candle_cache.py  interactive_trading_manager.py  logger.py  performance_tracker.py  startup_validator.py  swing_detector.py  trade_approval.py  validation.py
